--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-requests
-pdfplumber
-plotly
-numpy
-pandas
-spacy
+streamlit==1.40.1
+requests==2.32.3
+pdfplumber==0.11.4
+plotly==5.15.0
+numpy==1.21.6
+pandas==1.3.5
+spacy==3.4.1
