--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pandas==1.4.4
-streamlit==1.40.1
-requests==2.32.3
-pdfplumber==0.11.4
-plotly==5.15.0
-spacy==3.4.1
+pandas
+streamlit
+requests
+pdfplumber
+plotly
